--- a/dokumentacja.tex
+++ b/dokumentacja.tex
@@ -208,7 +208,14 @@ Inicjalizacja magistrali I2C2 odbywa się poprzez wykonanie następujących krok
     \item Początkowe ustawienia\\
         Rozpoczęcie transmisji odbywa się poprzez ustawienie flagi START w rejestraze I2CON (bit 5) na 1 oraz flagi SI (przerwanie) w rejestrze I2CON (5 bit) na 0. Później master czeka na zmianę flagi SI na 1, która oznacza, że transmisja została rozpoczęta. Następnie sprawdzany jest rejest stanu I2STAT, aby sprawdzić, czy warunek START został wysłany (0x08). Ustawiamy SI na 0.
     \item Wysyłanie danych\\
-        
+    \begin{enumerate}
+        \item Wysyłanie adresu urządzenia. Adres urządzenia jest 7-bitowy. W rejestrze I2DAT należy wpisać adres urządzenia, a następnie ustawić pierwszy bit na 0, aby wskazać, że wysyłamy adres. Następnie ustawiamy flagę SI w rejestrze I2CON na 0.
+        \item Master oczekuje na potwierdzenie (ACK) od slave - (z Tabeli 400) w rejestrze I2STAT powinna znajdowaćsię wartość 0x18. Gdy znajduje się tam inna wartość, to adres jest ponownie wysyłany.
+        \item Po otrzymaniu ACK, master ustawia bit 5 w rejestrze I2CON (STA) na 0.
+        \item Następnie master wysyła dane. W rejestrze I2DAT należy wpisać dane, które chcemy wysłać. Następnie ustawiamy flagę SI w rejestrze I2CON na 0.
+        \item Oczekiwanie na ustawienie SI rejestru I2CON na 1
+        \item Master oczekuje na potwierdzenie (ACK) od slave w rejestrze I2STAT powinna znajdowaćsię wartość 0x28. Gdy otrzymano ACK, to przechodzi do wysłania kolejnych danych.
+    \end{enumerate}
     
     \item Odbieranie danych\\
     \begin{enumerate}
@@ -223,6 +230,20 @@ Inicjalizacja magistrali I2C2 odbywa się poprzez wykonanie następujących krok
             \item przed ostatnim bajtem danych master ustawia bit 2 w rejestrze I2CON (AA) na 0, aby wyłączyć ACK.
         \end{enumerate}    
     \end{enumerate}    
+
+    \item Zmiana i odczyt rejestrów urządzeń slave\\
+    \begin{enumerate}
+        \item Wysyłamy adres rejestru, który chcemy odczytać lub zmodyfikować.
+        \item Jeśli chcemy modyfikować rejestr, należy wysłać nową wartość rejewstru.
+        \item Jeśli chcemy odczytać, należy zacząć odbierać dane
+        
+    \end{enumerate}
+
+    \item Koniec transmisji\\
+    \begin{enumerate}
+        \item W celu zakończenia transmisji należy ustawić bit 4 (STO) w rejestrze I2CON na 1.
+        \item Zmiana wartości flagi SI w rejestrze I2CON na 0.
+    \end{enumerate}
 
 
 \end{enumerate}
